Does now send register and unregister events to the API gateway on docker start and stop

--- a/membership/docker/conf/php-fpm.conf
+++ b/membership/docker/conf/php-fpm.conf
@@ -14,7 +14,7 @@
 ; Pid file
 ; Note: the default prefix is /usr/local/var
 ; Default Value: none
-;pid = run/php-fpm.pid
+pid = /var/run/php-fpm.pid
 
 ; Error log file
 ; If it's set to "syslog", log is sent to syslogd instead of being written
