--- a/membership/docker/Dockerfile
+++ b/membership/docker/Dockerfile
@@ -14,14 +14,15 @@ COPY conf/php-fpm-www.conf /etc/php-fpm.d/www.conf
 
 # Install PDO
 RUN	docker-php-ext-configure pdo_mysql && \
-	docker-php-ext-install pdo_mysql
+    docker-php-ext-install pdo_mysql
 
 # Forward request and error logs to docker log collector
-RUN 	   ln -sf /dev/stdout /var/log/nginx/access.log \
-	&& ln -sf /dev/stderr /var/log/nginx/error.log
+RUN ln -sf /dev/stdout /var/log/nginx/access.log && \
+    ln -sf /dev/stderr /var/log/nginx/error.log
 
 EXPOSE 80
 #VOLUME ["/var/www/html"]
 
 COPY myStartupScript.sh /usr/local/myscripts/myStartupScript.sh
-CMD ["/bin/bash", "/usr/local/myscripts/myStartupScript.sh"]
+COPY registerService.sh /usr/local/myscripts/registerService.sh
+CMD ["/usr/local/myscripts/myStartupScript.sh"]
