--- a/membership/docker/server.ini
+++ b/membership/docker/server.ini
@@ -11,7 +11,9 @@ hhvm.server.error_document404 = index.php
 hhvm.repo.central.path = /var/run/hhvm/hhvm.hhbc
 hhvm.server.source_root=/var/www/html/public
 
-; default log location is stdout/err, which is good for docker
-hhvm.log.use_log_file = true
-
 hhvm.server.thread_count = 4
+
+; Logging to stdout
+hhvm.log.use_log_file = true
+hhvm.log.file = /dev/stdout
+
