Update .env.example with mailgun config

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ API_BEARER=secret_service_key
 TICTAIL_USER=
 TICTAIL_PASS=
 TICTAIL_STORE=
+MAILGUN_DOMAIN=
+MAILGUN_KEY=
+MAILGUN_FROM=Excited User <excited@samples.mailgun.org>
