--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,9 +135,9 @@ services:
         MYSQL_PASS: "${MYSQL_PASS}"
         APIGATEWAY: "api-gateway"
         BEARER: "${API_BEARER}"
-        MAILGUN_DOMAIN: "sandboxf02432d388a340188a191b2f619cce81.mailgun.org"
-        MAILGUN_KEY: "key-845e04d3db27ab1fe10de27c8e49bbc7"
-        MAILGUN_FROM: "Excited User <excited@samples.mailgun.org>"
+        MAILGUN_DOMAIN: "${MAILGUN_DOMAIN}"
+        MAILGUN_KEY: "${MAILGUN_KEY}"
+        MAILGUN_FROM: "${MAILGUN_FROM}"
     depends_on:
       - api-gateway
       - messages
