--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ TICTAIL_STORE=
 MAILGUN_DOMAIN=
 MAILGUN_KEY=
 MAILGUN_FROM=Excited User <excited@samples.mailgun.org>
+MAILGUN_TO_OVERRIDE=
+HOST_BACKEND=localhost:8010
+HOST_FRONTEND=localhost:8009
