Started on models to mimic the MultiAccess database.

--- a/multiaccess-program/Makefile
+++ b/multiaccess-program/Makefile
@@ -8,7 +8,7 @@ test:
 dist-sync:
 
 dist-export:
-	docker run -it --rm -v $(shell pwd):/src cdrx/pyinstaller-windows:python3 "/usr/bin/pyinstaller --onefile --clean -y --dist ./dist --workpath /tmp multi_access_export.spec; chown -R --reference=. ./dist ./src"
+	docker run -it --rm -v $(shell pwd):/src cdrx/pyinstaller-windows:python3 "/usr/bin/pyinstaller --onefile --clean -y --dist ./dist --workpath /tmp multi_access_export.spec; chown -R --reference=. ./dist ./destroyer"
 
 dist: dist-sync dist-export
 
