Fix pip3 not being properly installed

--- a/currentmember/Dockerfile
+++ b/currentmember/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:latest
 
-RUN apt-get update && apt-get install -y --no-install-recommends curl python3 python3-pip
+RUN apt-get update && apt-get install -y curl python3 python3-pip
 RUN pip3 install --upgrade pip
 RUN pip3 install setuptools
 RUN pip3 install flask flask-compress fuzzywuzzy jsonpickle PyMySQL python-dateutil requests
