--- a/currentmember/member_view/Dockerfile
+++ b/currentmember/member_view/Dockerfile
@@ -7,7 +7,8 @@ RUN pip3 install flask flask-compress fuzzywuzzy jsonpickle PyMySQL python-dateu
 
 # Add all the source files
 RUN mkdir -p /var/www/service/
-ADD ./src /var/www/service/
+COPY member_view/src /var/www/service/
+COPY common /var/www/service/
 
 EXPOSE 80
 
