--- a/emaildispatcher/lumen/composer.json
+++ b/emaildispatcher/lumen/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/lumen-framework": "5.3.*",
+        "makeradmin/makeradmin-library": "dev-master",
         "vlucas/phpdotenv": "~2.2",
         "mailgun/mailgun-php": "^2.1",
         "php-http/guzzle6-adapter": "^1.1",
