--- a/apigateway/lumen/composer.json
+++ b/apigateway/lumen/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/lumen-framework": "5.3.*",
+        "makeradmin/makeradmin-library": "dev-master",
         "vlucas/phpdotenv": "~2.2",
         "dusterio/lumen-passport": "^0.1.3",
         "league/flysystem": "^1.0"
