--- a/multiaccess-program/Makefile
+++ b/multiaccess-program/Makefile
@@ -1,15 +1,15 @@
 
 init:
-	python -m pip install -r requirements.txt --upgrade
+	python3 -m pip install -r requirements.txt --upgrade
 
 pep8:
-	python -m pycodestyle --ignore=W503,W504,W391,W293,E741,E701,E241,E402 --max-line-length=120 --exclude=.direnv,dist,build,.idea .
+	python3 -m pycodestyle --ignore=W503,W504,W391,W293,E741,E701,E241,E402 --max-line-length=120 --exclude=.direnv,dist,build,.idea .
 
 test: pep8
-	python -m nose test
+	python3 -m nose test
 
 win-test: 
-	python -m nose win-test
+	python3 -m nose win-test
 
 all-test: test win-test
 
