--- a/messages/docker/server.ini
+++ b/messages/docker/server.ini
@@ -10,7 +10,7 @@ hhvm.server.default_document = index.php
 hhvm.server.error_document404 = index.php
 hhvm.repo.central.path = /var/run/hhvm/hhvm.hhbc
 hhvm.server.source_root=/var/www/html/public
-
+hhvm.log.level = "Warning"
 hhvm.server.thread_count = 4
 
 ; Logging to stdout
