--- a/currentmember/webshop/Dockerfile
+++ b/currentmember/webshop/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:latest
 
-RUN apt-get update && apt-get install -y curl python3 python3-pip python3-mysqldb inotify-tools wget
+RUN apt-get update && apt-get install -y curl python3 python3-pip python3-mysqldb inotify-tools wget netcat
 RUN pip3 install --upgrade pip
 RUN pip3 install setuptools
 RUN pip3 install flask flask-compress fuzzywuzzy jsonpickle PyMySQL python-dateutil requests mygrations stripe
