--- a/multiaccess-program/requirements.txt
+++ b/multiaccess-program/requirements.txt
@@ -1,3 +1,4 @@
+jsonschema
 # Keeping all dependencies in one file for simplicity. Pyinstaller
 # will only pick direct depencencies into the windows runtime.
 
