--- a/apigateway/lumen/composer.json
+++ b/apigateway/lumen/composer.json
@@ -5,17 +5,17 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/lumen-framework": "5.3.*",
-        "makeradmin/makeradmin-library": "dev-master",
+        "php": ">=7.1.3",
+        "laravel/lumen-framework": "5.6.*",
+        "makeradmin/makeradmin-library": "dev-lumen_5_6",
         "vlucas/phpdotenv": "~2.2",
-        "dusterio/lumen-passport": "^0.1.3",
+        "dusterio/lumen-passport": "^0.2.0",
         "league/flysystem": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "phpunit/phpunit": "~5.0",
-        "mockery/mockery": "~0.9"
+        "phpunit/phpunit": "~7.0",
+        "mockery/mockery": "~1.0"
     },
     "autoload": {
         "psr-4": {
@@ -26,11 +26,6 @@
         "classmap": [
             "tests/",
             "database/"
-        ]
-    },
-    "scripts": {
-        "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
         ]
     },
     "minimum-stability": "dev",
