--- a/emaildispatcher/lumen/composer.json
+++ b/emaildispatcher/lumen/composer.json
@@ -5,18 +5,18 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/lumen-framework": "5.3.*",
-        "makeradmin/makeradmin-library": "dev-master",
+        "php": ">=7.1.3",
+        "laravel/lumen-framework": "5.6.*",
+        "makeradmin/makeradmin-library": "dev-lumen_5_6",
         "vlucas/phpdotenv": "~2.2",
-        "mailgun/mailgun-php": "^2.1",
+        "mailgun/mailgun-php": "^2.5",
         "php-http/guzzle6-adapter": "^1.1",
         "php-http/message": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "phpunit/phpunit": "~5.0",
-        "mockery/mockery": "~0.9"
+        "phpunit/phpunit": "~7.0",
+        "mockery/mockery": "~1.0"
     },
     "autoload": {
         "psr-4": {
@@ -27,11 +27,6 @@
         "classmap": [
             "tests/",
             "database/"
-        ]
-    },
-    "scripts": {
-        "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
         ]
     },
     "minimum-stability": "dev",
