--- a/membership/lumen/composer.json
+++ b/membership/lumen/composer.json
@@ -5,24 +5,25 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/lumen-framework": "5.3.*",
-        "makeradmin/makeradmin-library": "dev-master",
+        "php": ">=7.1.3",
+        "laravel/lumen-framework": "5.6.*",
+        "makeradmin/makeradmin-library": "dev-lumen_5_6",
         "vlucas/phpdotenv": "~2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "phpunit/phpunit": "~5.0",
-        "mockery/mockery": "~0.9"
+        "phpunit/phpunit": "~7.0",
+        "mockery/mockery": "~1.0"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
         }
     },
-    "scripts": {
-        "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
+    "autoload-dev": {
+        "classmap": [
+            "tests/",
+            "database/"
         ]
     },
     "minimum-stability": "dev",
