--- a/servicebase/DockerfileService
+++ b/servicebase/DockerfileService
@@ -1,23 +1,20 @@
 FROM makeradmin/servicebase:1.0
 
-# Add and install dependencies
-# This is done in a different step from adding the source code to allow docker to cache the results
-# and thus improve build times significantly if no dependencies have changed.
-ADD ./lumen/composer.json /var/www/html/
-ADD ./lumen/composer.lock /var/www/html/
-RUN composer update makeradmin/makeradmin-library --no-scripts --no-autoloader --no-suggest -d /var/www/html
-
 # Add all the other lumen files
 ADD ./lumen /var/www/html/
 
-# Run the remaining composer scripts (with hhvm's jit disabled to reduce startup time)
-RUN hhvm -d hhvm.jit=0 /usr/local/bin/composer dump-autoload -d /var/www/html
+# Run composer and update makeradmin-library
+RUN composer update makeradmin/makeradmin-library --no-suggest --no-dev -d /var/www/html
 
-# HHVM configuration files
-ADD ./docker/server.ini /etc/hhvm/server.ini
-RUN touch /etc/hhvm/site.ini
+RUN mkdir -p /var/www/html/storage/logs
+
+# Make sure webserver can access server files
+RUN chown -R www-data:www-data /var/www/html
+
+VOLUME /var/www/html/storage/logs
 
 EXPOSE 80
 
 COPY ./docker/myStartupScript.sh /usr/local/myscripts/myStartupScript.sh
+
 CMD ["/usr/local/myscripts/myStartupScript.sh"]
