--- a/servicebase/lumen/composer.json
+++ b/servicebase/lumen/composer.json
@@ -1,29 +1,33 @@
 {
-	"name" : "laravel/lumen",
-	"description" : "The Laravel Lumen Framework.",
-	"keywords" : [
-		"framework",
-		"laravel",
-		"lumen"
-	],
-	"license" : "MIT",
-	"type" : "project",
-	"require" : {
-		"php" : ">=5.6.4",
-		"laravel/lumen-framework" : "5.3.*",
-		"makeradmin/makeradmin-library" : "dev-master",
-		"vlucas/phpdotenv" : "~2.2"
-	},
-	"require-dev" : {
-		"fzaninotto/faker" : "~1.4",
-		"phpunit/phpunit" : "~5.0",
-		"mockery/mockery" : "~0.9"
-	},
-	"autoload" : {
-		"psr-4" : {
-			"App\\" : "app/"
-		}
-	},
-	"minimum-stability" : "dev",
-	"prefer-stable" : true
+    "name": "laravel/lumen",
+    "description": "The Laravel Lumen Framework.",
+    "keywords": ["framework", "laravel", "lumen"],
+    "license": "MIT",
+    "type": "project",
+    "require": {
+        "php": ">=7.1.3",
+        "laravel/lumen-framework": "5.6.*",
+        "makeradmin/makeradmin-library": "dev-lumen_5_6",
+        "vlucas/phpdotenv": "~2.2",
+        "dusterio/lumen-passport": "^0.2.0",
+        "league/flysystem": "^1.0"
+    },
+    "require-dev": {
+        "fzaninotto/faker": "~1.4",
+        "phpunit/phpunit": "~7.0",
+        "mockery/mockery": "~1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
+    },
+    "autoload-dev": {
+        "classmap": [
+            "tests/",
+            "database/"
+        ]
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
