--- a/multiaccess-program/Makefile
+++ b/multiaccess-program/Makefile
@@ -1,4 +1,6 @@
 
+build:
+	echo "source_revision = '$(shell git rev-parse --short HEAD)$(shell if ! git diff-index --quiet HEAD --; then echo -dirty; fi)'" > source_revision.py
 init:
 	python3 -m pip install pip --upgrade
 	python3 -m pip install -r requirements.txt --upgrade
@@ -6,7 +8,7 @@ init:
 pep8:
 	python3 -m pycodestyle --ignore=W503,W504,W391,W293,E741,E701,E241,E402 --max-line-length=120 --exclude=.direnv,dist,build,.idea .
 
-test: pep8
+test: build pep8
 	python3 -m nose test
 
 coverage:
@@ -20,19 +22,19 @@ target-test:
 
 all-test: test target-test
 
-dist-sync:
+dist-sync: build
 	docker run -it --rm -v $(shell pwd):/src cdrx/pyinstaller-windows:python3 "/usr/bin/pyinstaller --onefile --clean -y --dist ./dist --workpath /tmp specs/multi_access_sync.spec; chown -R --reference=. ./dist ./multi_access"
 
-dist-export:
+dist-export: build
 	docker run -it --rm -v $(shell pwd):/src cdrx/pyinstaller-windows:python3 "/usr/bin/pyinstaller --onefile --clean -y --dist ./dist --workpath /tmp specs/multi_access_export.spec; chown -R --reference=. ./dist ./multi_access"
 
-dist-dump:
+dist-dump: build
 	docker run -it --rm -v $(shell pwd):/src cdrx/pyinstaller-windows:python3 "/usr/bin/pyinstaller --onefile --clean -y --dist ./dist --workpath /tmp specs/multi_access_dump.spec; chown -R --reference=. ./dist ./multi_access"
 
-dist: dist-sync dist-export
+dist: dist-sync dist-export dist-dump
 
 clean:
-	rm -rf dist build coverage
+	rm -rf dist build coverage source_revision.py
 	find . -name __pycache__ -prune -type d -exec rm -rf {} \;
 
 .PHONY: init test clean dist dist-sync dist-export coverage
