--- a/currentmember/rfid/Dockerfile
+++ b/currentmember/rfid/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:latest
 RUN apt-get update && apt-get install -y curl python3 python3-pip netcat
 RUN pip3 install --upgrade pip
 RUN pip3 install setuptools
-RUN pip3 install flask flask-compress fuzzywuzzy jsonpickle PyMySQL python-dateutil requests gunicorn blinker
+RUN pip3 install flask flask-compress fuzzywuzzy jsonpickle PyMySQL python-dateutil requests gunicorn blinker dataclasses
 
 # Add all the source files
 RUN mkdir -p /var/www/service/
